--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,17 @@
 {
     "cSpell.words": [
+        "appspot",
+        "authuser",
+        "developmen",
+        "emailref",
+        "firebaseapp",
+        "firestore",
+        "initialstate",
         "isloding",
         "newfilm",
+        "passwordref",
         "setloding",
+        "Signin",
         "yihenew"
     ]
 }
